--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "engines":{
-    "node":"22.17.0"
+  "engines": {
+    "node": "22.17.0"
   },
   "name": "major-project",
   "version": "1.0.0",
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.16.1",
+    "axios": "^1.11.0",
     "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
@@ -27,7 +28,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.16.3",
     "multer": "^2.0.2",
-  "multer-storage-cloudinary": "^4.0.0",
+    "multer-storage-cloudinary": "^4.0.0",
     "node-fetch": "^2.7.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
